# rockapp-api

./: .gitignore  README.md  docker-compose.parser.yml  docker-compose.yml  main.py  parser.Dockerfile  pyproject.toml  rq.Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 2d9b683155f5_add_user.py  9ffece019c2c_add_rocks.py  bfc72fec3922_rename_user_rocks_cost.py
backend/mindat_parser/: main.py  models.py  scraper.py
backend/mindat_parser/cache/: min-1.html  min-2.html
backend/src/: main.py
backend/src/core/: config.py  localstorage.py  logging_setup.py
backend/src/db/: exceptions.py
backend/src/detector/api/: dependencies.py
backend/src/detector/application/: adapter.py  google_adapter.py  openai_adapter.py
backend/src/detector/application/interfaces/: client.py  queue_service.py  storage.py
backend/src/detector/application/use_cases/: run_detect.py
backend/src/detector/domain/: dtos.py  entities.py  exceptions.py
backend/src/detector/infrastructure/: localstorage.py
backend/src/detector/infrastructure/gcloud/: detector.py
backend/src/detector/infrastructure/openai/: client.py  detector.py  responses.py
backend/src/detector/infrastructure/rq/: queue_service.py
backend/src/elasticsearch/: engine.py
backend/src/rock/api/: admin.py  commands.py  dependencies.py  rest.py
backend/src/rock/application/interfaces/: rock_uow.py  (+6 more)
backend/src/rock/domain/: dtos.py  entities.py  exceptions.py  mappers.py
backend/src/user/api/: admin.py  api.py  dependencies.py  rest.py
backend/src/user/domain/: dtos.py  entities.py
backend/src/user/infrastructure/: user_uow.py
etc/elasticsearch/: elasticsearch.yml
(+30 files in other folders)
